--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,20 @@ img {
 .no-wrap {
     white-space: nowrap;
 }
+
+.animate-pop {
+    animation: popUp 0.5s ease forwards;
+}
+
+
+@keyframes popUp {
+    from {
+        transform: translateY(300px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
