--- a/src/index.css
+++ b/src/index.css
@@ -208,6 +208,12 @@ img {
     box-shadow: 0px 100px 100px -60px rgba(34, 60, 80, 0.4);
 }
 
+.custom-shadows-mobile {
+    -webkit-box-shadow: 0px 100px 100px -20px rgba(34, 60, 80, 0.5);
+    -moz-box-shadow: 0px 100px 100px -20px rgba(34, 60, 80, 0.5);
+    box-shadow: 0px 100px 100px -20px rgba(34, 60, 80, 0.5);
+}
+
 .footer-link {
     transition: .2s;
 }
